2002-12-13  Naba Kumar <naba@gnome.org>

	* anjuta.glade, src/anjuta-tools.c: Added a new column in the
	tools list to show "Enabled" flag of the tool. Fixed a bug where
	tool list is not cleared when creating a new tool.
	
2002-12-13  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* anjuta.glade, src/anjuta-tools.c: Added user params to tools.

2002-12-12  Naba Kumar <naba@gnome.org>

	* anjuta-tools.[h,c], commands.c: Used the tools help of
	anjuta variables list in commands editor and fixed a typos
	buy in anjuta-tools.c.
	
2002-12-12  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* anjuta.glade, src/anjuta-tools.c, src/text_editor.[ch]
	, src/mainmenu_callbacks.c, controls.c: Tools editor stuff.
	* TODO.biswa: Added to help me track things better.

2002-12-11  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>

	* configure.in, anjuta.spec.in: Added libglade dependency.
	* Makefile.am: Added anjuta.glade file.
	* src/anjuta-tools.c, src/main.c, src/main_menubar_def.h
	, src/mainmenu_callbacks.[ch], src/message-manager.h
	, src/widget-registry.c: Tools editor GUI + other additions.

2002-12-09  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>

	* src/project_dbase.[ch], tagmanager/tm_project.c,
	tagmanager/include/tm_project.h, src/mainmenu_callbacks.c:
	Implement syncing tags image with the project database.
	* src/anjuta-tools.c: Implemented variable substitution and
	working directory in tools.

2002-12-09  Naba Kumar <naba@gnome.org>
	
	* data/properties/anjuta.properties, src/commands.[ch]: Reads the
	command configuration language list from properties.
	
	* data/properties/asm.properties, data/properties/ruby.properties:
	Fixed typos.

2002-12-04  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>

	* src/an_symbol_view.c: Remember current selected entry and select
	it automatically after refresh.

2002-11-26  Murray Cumming  <murrayc@usa.net>
