@@ -1,3 +1,6 @@
+2002-12-13  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
+	* tagmanager/tm_project.c: Fix a memory access problem.
+
 2002-12-13  Naba Kumar <naba@gnome.org>
 
 	* anjuta.glade, src/anjuta-tools.c: Added a new column in the
